# Space_Invaders

./: CMakeLists.txt
game1/: CMakeLists.txt
game1/inc/: Game.h
game1/src/: Game.cpp  main.cpp
game2/: CMakeLists.txt
game2/inc/: Game.h  Player.h  SwagBall.h
game2/src/: Game.cpp  Player.cpp  SwagBall.cpp  game2.cpp  main.cpp
inc/: Game.h
space_invaders/: CMakeLists.txt
space_invaders/Resources/Config/: window.ini
space_invaders/Source/Components/: MovementComponent.cpp  MovementComponent.h
space_invaders/Source/Core/: Game.cpp
space_invaders/Source/Entities/: Entity.cpp  Entity.h  Player.cpp  Player.h
space_invaders/Source/States/: GameState.cpp  GameState.h  MainMenuState.cpp
space_invaders/inc/: Game.h
space_invaders/src/: Game.cpp  main.cpp
space_invaders2/: CMakeLists.txt
space_invaders2/Resources/Config/: gamestate_keybinds.ini  window.ini
space_invaders2/Resources/HighScore/: HighScore.txt
space_invaders2/Resources/Images/Backgrounds/: Sprite-0002.aseprite
space_invaders2/Source/Components/: MovementComponent.cpp  MovementComponent.h
space_invaders2/Source/Core/: Game.cpp  Game.h  HighScoreManager.cpp  HighScoreManager.h  MusicResource.cpp  MusicResource.h  User.cpp  User.h
space_invaders2/Source/Entities/: Alien.cpp  Alien.h  Block.cpp  Block.h  Entity.cpp  Entity.h  Laser.cpp  Laser.h  Mysteryship.cpp  Mysteryship.h  Obstacle.cpp  Obstacle.h  Player.cpp  Player.h
space_invaders2/Source/States/: ChangeUsernameState.cpp  ChangeUsernameState.h  EventListener.h  GameState.cpp  GameState.h  HighScoreState.cpp  HighScoreState.h  HowToPlayState.cpp  InGameMenu.cpp  InGameMenu.h  MainMenuState.cpp  MainMenuState.h  PauseMenu.cpp  PauseMenu.h  SettingsState.cpp  SettingsState.h  State.cpp  State.h
space_invaders2/Source/States/GameState/: GameOverMenu.cpp  GameOverMenu.h  GameState.cpp  GameState.h  GameStateMenu.cpp  GameStateMenu.h  HowToPlayState.h  PauseMenu.cpp  PauseMenu.h
space_invaders2/Source/UI/: Button.cpp  Button.h
src/: Game.cpp  main.cpp
